--- a/visualization_configs/color_maps/kitti_color_map.yaml
+++ b/visualization_configs/color_maps/kitti_color_map.yaml
@@ -1,5 +1,5 @@
-label:
-  0 : "unlabeled"
+pcd_label:
+  0: "unlabeled"
   1: "car"
   2: "bicycle"
   3: "motorcycle"
@@ -20,7 +20,7 @@ label:
   18: "pole"
   19: "traffic-sign"
 
-color_map:  # color from original KITTI
+pcd_color_map:  # color from original KITTI
   0: [0, 0, 0]  # 0
   1: [245, 150, 100]  # 10
   2: [245, 230, 100]  # 11
@@ -41,4 +41,5 @@ color_map:  # color from original KITTI
   17: [80, 240, 150]  # 72
   18: [150, 240, 255]  # 80
   19: [0, 0, 255]  # 81
-  
+
+bbox_color_map:
