--- a/visualization_configs/color_maps/waymo_color_map.yaml
+++ b/visualization_configs/color_maps/waymo_color_map.yaml
@@ -1,4 +1,4 @@
-label:
+pcd_label:
   0: "TYPE_UNDEFINED"
   1: "TYPE_CAR"
   2: "TYPE_TRUCK"
@@ -23,7 +23,7 @@ label:
   21: "TYPE_WALKABLE"
   22: "TYPE_SIDEWALK"
 
-color_map:
+pcd_color_map:
   0: [0, 0, 0]
   1: [245, 150, 100]
   2: [180, 30, 80]
@@ -47,3 +47,6 @@ color_map:
   20: [75, 0, 125]
   21: [75, 0, 75]
   22: [75, 0, 75]
+
+bbox_color_map:
+  
