--- a/visualization_configs/color_maps/nuscene_color_map.yaml
+++ b/visualization_configs/color_maps/nuscene_color_map.yaml
@@ -20,5 +20,51 @@ pcd_color_map:
   7: [50, 120, 255]
   8: [245, 150, 100]
 
+bbox_label:
+  0: animal
+  1: human.pedestrian.adult
+  2: human.pedestrian.child
+  3: human.pedestrian.construction_worker
+  4: human.pedestrian.personal_mobility
+  5: human.pedestrian.police_officer
+  6: human.pedestrian.stroller
+  7: human.pedestrian.wheelchair
+  8: movable_object.barrier
+  9: movable_object.debris
+  10: movable_object.pushable_pullable
+  11: movable_object.trafficcone
+  12: static_object.bicycle_rack
+  13: vehicle.bicycle
+  14: vehicle.bus.bendy
+  15: vehicle.bus.rigid
+  16: vehicle.car
+  17: vehicle.construction
+  18: vehicle.emergency.ambulance
+  19: vehicle.emergency.police
+  20: vehicle.motorcycle
+  21: vehicle.trailer
+  22: vehicle.truck
 bbox_color_map:
-  
+  0: [255, 255, 50]
+  1: [30, 30, 255]
+  2: [30, 30, 255]
+  3: [30, 30, 255]
+  4: [30, 30, 255]
+  5: [30, 30, 255]
+  6: [30, 30, 255]
+  7: [30, 30, 255]
+  8: [50, 120, 255]
+  9: [255, 255, 50]
+  10: [255, 255, 50]
+  11: [150, 240, 255]
+  12: [255, 255, 50]
+  13: [245, 230, 100]
+  14: [250, 80, 100]
+  15: [250, 80, 100]
+  16: [245, 150, 100]
+  17: [255, 0, 0]
+  18: [180, 30, 80]
+  19: [245, 150, 100]
+  20: [150, 60, 30]
+  21: [255, 0, 0]
+  22: [180, 30, 80]
