--- a/visualization_configs/color_maps/waymo_color_map.yaml
+++ b/visualization_configs/color_maps/waymo_color_map.yaml
@@ -48,5 +48,14 @@ pcd_color_map:
   21: [75, 0, 75]
   22: [75, 0, 75]
 
+bbox_label:
+  0: "TYPE_VEHICLE"
+  1: "TYPE_PEDESTRIAN"
+  2: "TYPE_CYCLIST"
+  3: "TYPE_SIGN"
+
 bbox_color_map:
-  
+  0: [245, 150, 100]
+  1: [30, 30, 255]
+  2: [200, 40, 255]
+  3: [0, 0, 255]
